[gd_scene load_steps=8 format=3 uid="uid://faku31w7yhec"]

[ext_resource type="Script" path="res://scripts/player/player_flying_scene.gd" id="1_bbaqt"]
[ext_resource type="PackedScene" uid="uid://8rjjgn7r2g22" path="res://scenes/game_ui/game_pause_scene.tscn" id="2_582gl"]
[ext_resource type="PackedScene" uid="uid://lidxun3v1u3h" path="res://scenes/game_ui/game_over_scene.tscn" id="3_r5xil"]
[ext_resource type="PackedScene" uid="uid://cpoy7p032mikq" path="res://scenes/game_ui/game_won_scene.tscn" id="4_eb51t"]
[ext_resource type="PackedScene" uid="uid://d0k77qlot24nc" path="res://scenes/game_ui/typewriter_dialog_scene.tscn" id="5_ipbx3"]
[ext_resource type="PackedScene" uid="uid://uqsnfk54cjss" path="res://scenes/game_ui/player_tooltip.tscn" id="6_5qa14"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1gfuc"]

[node name="FlyingPlayerScene" type="CharacterBody3D"]
script = ExtResource("1_bbaqt")

[node name="PlayerHead" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="PlayerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64966, 0)

[node name="RayCast3D" type="RayCast3D" parent="PlayerHead/Camera"]
target_position = Vector3(0, 0, -3)

[node name="Body" type="Node3D" parent="PlayerHead/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.64966, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="PlayerHead/Camera/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="BodyCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
shape = SubResource("BoxShape3D_1gfuc")

[node name="PlayerUI" type="Node" parent="."]

[node name="Pause" type="Node" parent="PlayerUI"]

[node name="GamePauseScene" parent="PlayerUI/Pause" instance=ExtResource("2_582gl")]
visible = false

[node name="GameEnd" type="Node" parent="PlayerUI"]

[node name="GameOverScene" parent="PlayerUI/GameEnd" instance=ExtResource("3_r5xil")]
visible = false

[node name="GameWonScene" parent="PlayerUI/GameEnd" instance=ExtResource("4_eb51t")]
visible = false

[node name="GameUI" type="Node" parent="PlayerUI"]

[node name="TypewriterDialogScene" parent="PlayerUI/GameUI" instance=ExtResource("5_ipbx3")]

[node name="PlayerTooltip" parent="PlayerUI/GameUI" instance=ExtResource("6_5qa14")]
position = Vector2(0, 392)
